fix vertical align on blog page

--- a/stylesheets/includes/profile.css
+++ b/stylesheets/includes/profile.css
@@ -5,17 +5,13 @@
 }
 
 .blog{
-  position:relative;
-  height: 100%;
+  position:absolute;;
   width: 100%;
-  display: table;
-}
-.blog-inner{
-  position:relative;
-  width: 100%;
-  height: 100%;
-  display: table-cell;
-  vertical-align: middle;
+  height: 120px;
+  left: 0;
+  top: 50%;
+  margin-top: -60px;
+  display: block;
 }
 
 .profile img{
